--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,21 @@ services:
     ports:
       - 8000:8000
     restart: always
+    env_file:
+      - .env
     depends_on:
       - postgresdb
 
   postgresdb:
     image: postgres:latest
+    restart: always
     hostname: postgres
     ports:
       - 5432:5432
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: app
+    env_file:
+      - .env
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
-
+volumes:
+    pgdata:
