--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-ALGORITHM="HS256"
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="postgres"
-POSTGRES_DB="app"
+POSTGRES_SERVER=postgresdb
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=app
 
-FIRST_USER_EMAIL = "test@example.com"
-FIRST_USER_PASSWORD = "test"
+FIRST_USER_EMAIL=test@example.com
+FIRST_USER_PASSWORD=test
